--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+/* span {
+  writing-mode: vertical-lr;
+} */
