--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
@@ -5,6 +7,15 @@
   margin: 0;
   box-sizing: border-box;
 }
-/* span {
-  writing-mode: vertical-lr;
-} */
+:root {
+  --body-color: hsla(228, 15%, 15%);
+  --body-font: "Poppins", sans-serif;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
+body {
+  background-color: var(--body-color);
+  font-family: var(--body-font);
+  color: white;
+}
