--- a/src/styles/componentStlyes.css
+++ b/src/styles/componentStlyes.css
@@ -32,16 +32,45 @@
   -webkit-backdrop-filter: blur(4px);
   backdrop-filter: blur(4px);
 }
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #e0e0e0;
-  color: Navy;
-  border-radius: 12px;
-  z-index: 1000;
+.navlinks::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background: linear-gradient(90deg, #f4d8cd 20%, #edb183 60%);
+  transition: all 0.5s;
 }
+.navlinks:hover::before {
+  width: 100%;
+}
+
+/*  ##### IMAGE SLIDER ###### */
+.image-slider {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.image-slider div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: transform 1s ease-in-out;
+}
+
+.image-slider div.transform.translate-x-0 {
+  transform: translateX(0);
+}
+
+.image-slider div.transform.-translate-x-full {
+  transform: translateX(-100%);
+}
+
 @keyframes showArrow {
   0% {
     opacity: 0;
