--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 .navlinks {
-  @apply text-sm font-semibold mx-1 my-0 py-0 px-3 transition-all duration-200 rounded-3xl cursor-pointer;
-}
-.navlinks:hover {
-  @apply text-brightRed px-3 border-b-2;
-}
-.navlinks:active {
-  @apply py-0.5;
+  @apply relative text-sm font-semibold mx-4 my-0 py-0 transition-all duration-200 rounded-3xl cursor-pointer;
 }
 * {
   margin: 0;
