--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 .navlinks {
-  @apply relative text-sm font-semibold mx-4 my-0 py-0 transition-all duration-200 rounded-3xl cursor-pointer;
+  @apply relative text-center text-sm font-semibold mx-4 my-0 py-0 transition-all duration-200 rounded-3xl cursor-pointer;
 }
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
+  color-scheme: dark;
+}
+.hero-header {
+  font-family: "Jersey 10", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 :root {
   --body-color: hsla(228, 15%, 15%);
@@ -19,6 +29,5 @@ body::-webkit-scrollbar {
 }
 body {
   background-color: var(--body-color);
-  font-family: var(--body-font);
   color: white;
 }
