--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-.navlinks {
-  @apply relative text-center text-sm font-semibold mx-4 my-0 py-0 transition-all duration-200 rounded-3xl cursor-pointer;
-}
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  scroll-behavior: smooth;
-  color-scheme: dark;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Poppins", sans-serif;
+	scroll-behavior: smooth;
+	color-scheme: dark;
 }
 .hero-header {
-  font-weight: 400;
-  font-style: normal;
+	font-weight: 400;
+	font-style: normal;
+}
+.navlinks {
+	.navlinks {
+		@apply relative bg-red-400 text-center text-sm font-semibold mx-4 my-0 py-0 transition-all duration-200 rounded-3xl z-[1000] cursor-pointer;
+	}
 }
 :root {
-  --body-color: hsla(100%, 100%, 100%, 1);
-  --body-font: "Poppins", sans-serif;
+	--body-color: hsla(100%, 100%, 100%, 1);
+	--body-font: "Poppins", sans-serif;
 }
 body::-webkit-scrollbar {
-  display: none;
+	display: none;
 }
